add endpoints schema and query
