# src/app/model/compileRequest.ts
@@ -1,0 +1,6 @@
+export default interface CompileRequest {
+    expression: string
+    schema: string
+    language: string
+    variant: string
+}
