# src/app/model/expressionRequest.ts
@@ -1,4 +1,0 @@
-export default interface ExpressionRequest {
-    expression: string
-    context?: any
-}
