# src/app/model/runRequest.ts
@@ -1,0 +1,5 @@
+export default interface RunRequest {
+    expression: string
+    connection: string
+    context?: any
+}
